# spark-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  requirements.txt
.claude/: settings.local.json
agents/: README.md  direct_client.py
agents/TEST_host_agent_adk/: host_evaluation.evalset.json
agents/host_agent_adk/: README_API.md  api_server.py  pyproject.toml  run_api.py
agents/host_agent_adk/host/: agent.py  prompt.py  remote_agent_connection.py
agents/host_agent_adk/spark_host_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agents/reconciler_agent/: agent.py  prompt.py  pyproject.toml  risk_message_sample.json
agents/reconciler_agent/sub_agents/escalator_agent/: agent.py
agents/reconciler_agent/sub_agents/escalator_agent/tools/: save_generated_report.py
agents/reconciler_agent/tools/: retry_transaction.py  transaction_fetcher.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  server.js  tailwind.config.js  test-sse.html  vite.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/agents/: README.md
frontend/src/components/: BottomNavigation.js  ChatModal.js  FloatingChatButton.js  PaymentInfoCard.js  PrivacyNoticeModal.js  TransactionList.js  VybeLogo.js
frontend/src/pages/: AddMoney.js  Dashboard.js  Home.js  NotFound.js  PaymentDelayedScreen.js  Transactions.js
frontend/src/services/: agentApi.js  api.js  dataRefreshService.js
frontend/src/styles/: main.css
frontend/src/utils/: databaseTransactionManager.js  transactionManager.js
models/: README.md  experimentation.ipynb  trybe_discrepancy_detector.pkl  trybe_inference_demo.ipynb  trybe_risk_predictor.pkl
models/datasets/: user_wallet_balances.csv
models/notebooks/: 1_synthetic_data_generation.ipynb  2_EDA.ipynb  3_Trials.ipynb
spark/: README.md
spark/host_agent_adk/: pyproject.toml
spark/host_agent_adk/host/: agent.py  prompt.py
spark/host_agent_adk/host/tools/: database_tools.py  query_agent_capabilities.py  trybe_models.py
spark/reconciler_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  prompt.py
spark/reconciler_agent/sub_agents/: __init__.py
(+8 files in other folders)
