[project]
name = "spark-host-agent"
version = "0.1.0"
description = "SPARK Host Agent - AI-powered digital banking support for transaction discrepancy resolution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ADK & A2A Dependencies
    "google-adk[eval]>=1.2.1",
    "a2a-sdk>=0.2.5",
    "nest-asyncio>=1.6.0",
    "python-dotenv",
    "click",
    "uvicorn",
    "google-generativeai",
    "httpx",
    
    # Database Dependencies
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    
    # Additional Dependencies
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # Evaluation Dependencies
    "rouge-score>=0.1.2",
]

[project.scripts]
adk = "google.adk.cli:main"

[tool.uv]
package = true